2007-04-30  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: src/kahua/thread-pool.scm
	  New function thread-pool-inc! and thread-pool-dec!, and
	  change method add, wait-all and finish-all into function
	  thread-pool-add, thread-pool-wait-all and thread-pool-finish-all
	  respectively.

2007-04-28  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: src/kahua/config.scm.in
	  Add kahua-datapath utility.

2007-04-27  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/config.scm.in
	  Add "data" configuration slot. it has file strage directory
	  path.  The directory is placed in working directory.

2007-04-26  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/elem.scm, src/kahua/server.scm
	  Fix wrong format of entity reference node(&, &:, &/).

	* Change: src/kahua/server.scm
	  Integrate a and a/cont, form and form/cont, frame and frame/cont.
	  Change define-element syntax and add backward compatibility.

2007-04-24  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: check.scm
	  Change: configure.ac
	  Check Gauche version and its threading type, and
	  system thread type on Linux.

2007-04-20  Katsutoshi Itoh <cut-sea@kahua.org>

	* Fix: src/persistent.scm
	  bug fix for make-kahua-collection with :index :any.
	  When make-kahua-collection with :index :any, then,
	  index cache was destroyed.
	
2007-04-19  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: emacs/kahua.el.in
	  Now default "kahua-site-bundle" value is nil.
	  If it's nil, it means that kahua command is
	  invoked without -S option.

2007-04-13  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-httpd.scm, cgi/kahua.cgi.in
	  Support X-Forwarded-For HTTP header.
	  If X-Forwarded-For header in HTTP request, it
	  adds to x-kahua-metavariables as "HTTP_X_FORWARDED_FOR"
	  record, and its first (leftmost) address is set
	  to x-kahua-remote-addr.  Note that REMOATE_ADDR
	  in x-kahua-metavariables is not changed.
	  NB: this feature is not tested yet.
